--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bookstore</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>bookclub</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>bookclub</name>
+	<description>BookClub</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
