--- a/Module_5/src/main/resources/application.properties
+++ b/Module_5/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=bookclub
+#MongoDB Atlas - Connection
+spring.data.mongodb.database=bookclub
+spring.data.mongodb.uri=mongodb+srv://bookclub_user:99TmNC50dwaRXKjO@cluster0.gc1bu6i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
